CentOS 7 gdb-upstream-man-gcore-1of2.patch: Backported fixups post the source tarball.
http://sourceware.org/ml/gdb-cvs/2013-04/msg00109.html

### src/gdb/ChangeLog	2013/04/11 13:14:04	1.15397
### src/gdb/ChangeLog	2013/04/11 14:13:42	1.15398
## -1,4 +1,28 @@
 2013-04-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+	    Pedro Alves  <palves@redhat.com>
+
+	* Makefile.in (HAVE_NATIVE_GCORE_TARGET): New.
+	(generated_files): Add gcore.
+	(install-only, uninstall): Add gcore if HAVE_NATIVE_GCORE_TARGET or
+	HAVE_NATIVE_GCORE_HOST.
+	(gcore): New.
+	* NEWS (Changes since GDB 7.6): Mention newly installed gcore.
+	* config/alpha/alpha-osf3.mh, config/i386/fbsd.mh,
+	config/i386/fbsd64.mh, config/i386/i386gnu.mh, config/i386/i386sol2.mh,
+	config/i386/sol2-64.mh, config/mips/irix5.mh, config/mips/irix6.mh,
+	config/powerpc/fbsd.mh, config/sparc/fbsd.mh, config/sparc/sol2.mh:
+	Add HAVE_NATIVE_GCORE_HOST.
+	* configure: Regenerate.
+	* configure.ac (HAVE_NATIVE_GCORE_TARGET): New, set it, AC_SUBST it.
+	New AC_SUBST fir GDB_TRANSFORM_NAME and GCORE_TRANSFORM_NAME.  New
+	AC_CONFIG_FILES for gcore.
+	* configure.tgt: Add gdb_have_gcore to the initial comment.  Set
+	gdb_have_gcore.
+	* gdb_gcore.sh: Rename to ...
+	* gcore.in: ... here.  Remove gcore.sh comment.  Use GDB_TRANSFORM_NAME
+	and GCORE_TRANSFORM_NAME substitutions.
+
+2013-04-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

 	* remote.c (unpush_and_perror): Add output message final dot.

### src/gdb/doc/ChangeLog	2013/04/10 15:11:12	1.1440
### src/gdb/doc/ChangeLog	2013/04/11 14:13:44	1.1441
## -1,3 +1,13 @@
+2013-04-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* Makefile.in (MAN1S): Add gcore.1.
+	Remove "Host, target, and site specific Makefile fragments" comment.
+	(@host_makefile_frag@, HAVE_NATIVE_GCORE_TARGET): New.
+	(install-man1, uninstall-man1): Conditionalize gcore.1.
+	(gcore.1): New.
+	* gdb.texinfo (Man Pages): Add gcore man.
+	(gcore man): New node.
+
 2013-04-10  Pedro Alves  <palves@redh

--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -1,6 +1,9 @@
 		What has changed in GDB?
 	     (Organized release by release)
 
+* Newly installed $prefix/bin/gcore acts as a shell interface for the
+  GDB command gcore.
+
 *** Changes in GDB 7.6
 
 * Target record has been renamed to record-full.
