CentOS 8 gdb-vla-intel-fortran-vla-strings.patch
From FEDORA_PATCHES Mon Sep 17 00:00:00 2001
From: Fedora GDB patches <invalid@email.com>
Date: Fri, 27 Oct 2017 21:07:50 +0200
Subject: gdb-vla-intel-fortran-vla-strings.patch

;;=push

git diff --stat -p gdb/master...gdb/users/bheckel/fortran-vla-strings
0ad7d8d1a3a36c6e04e3b6d37d8825f18d595723

 gdb/NEWS                                  |   2 +
 gdb/c-valprint.c                          |  22 +++++
 gdb/dwarf2read.c                          | 158 +++++++++++++++++++++++++-----
 gdb/f-typeprint.c                         |  93 +++++++++---------
 gdb/gdbtypes.c                            |  44 ++++++++-
 gdb/testsuite/gdb.cp/vla-cxx.cc           |   9 ++
 gdb/testsuite/gdb.cp/vla-cxx.exp          |   9 ++
 gdb/testsuite/gdb.fortran/pointers.exp    | 143 +++++++++++++++++++++++++++
 gdb/testsuite/gdb.fortran/pointers.f90    | 109 +++++++++++++++++++++
 gdb/testsuite/gdb.fortran/print_type.exp  | 100 +++++++++++++++++++
 gdb/testsuite/gdb.fortran/vla-ptype.exp   |  12 +--
 gdb/testsuite/gdb.fortran/vla-strings.exp | 103 +++++++++++++++++++
 gdb/testsuite/gdb.fortran/vla-strings.f90 |  39 ++++++++
 gdb/testsuite/gdb.fortran/vla-type.exp    |   7 +-
 gdb/testsuite/gdb.fortran/vla-value.exp   |  12 ++-
 gdb/testsuite/gdb.mi/mi-var-child-f.exp   |   7 +-
 gdb/testsuite/gdb.mi/mi-vla-fortran.exp   |  27 ++---
 gdb/typeprint.c                           |  19 ++++
 gdb/valops.c                              |  16 ++-
 gdb/valprint.c                            |   6 --
 20 files changed, 827 insertions(+), 110 deletions(-)

--- a/gdb/NEWS
+++ b/gdb/NEWS
@@ -109,6 +109,8 @@ SH-5/SH64 running OpenBSD 	SH-5/SH64 support in sh*-*-openbsd*
 
 *** Changes in GDB 8.1
 
+* Fortran: Support pointers to dynamic types.
+
 * GDB now supports dynamically creating arbitrary register groups specified
   in XML target descriptions.  This allows for finer grain grouping of
   registers on systems with a large amount of registers.
